--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Wir blocken das !",
   "short_name": "MLGB",
   "description": "Wir blocken das !",
-  "background": { "scripts": ["jquery-2.1.4.js", "background.js"] },
+  "background": { "scripts": ["jquery-2.1.4.js", "utils.js", "background.js"] },
   "version": "1.0",
-  "permissions": ["tabs", "storage"],
+  "permissions": ["tabs", "storage", "contextMenus"],
   "page_action": {
         "default_icon": "icon.png",
         "default_title": "Wir blocken das",
         "default_popup": "popup.html"
     },
-  "content_scripts":[{
-    "matches":["http://www.dolc.de/*"],
-    "js":["jquery-2.1.4.js", "content_script.js"],
+  "content_scripts": [{
+    "matches": ["http://www.dolc.de/*"],
+    "js": ["jquery-2.1.4.js", "utils.js", "content_script.js"],
      "run_at": "document_end"
 	   }]
 }
