--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,49 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Wir blocken das !",
   "short_name": "MLGB",
   "description": "Wir blocken das !",
-  "background": { "scripts": ["jquery-2.1.4.js", "utils.js", "background.js"] },
-  "version": "1.1",
-  "permissions": ["tabs", "storage", "contextMenus"],
+  "icons": {
+    "128": "icon.png"
+  },
+  "background": {
+    "scripts": [
+      "jquery-2.1.4.js",
+      "utils.js",
+      "background.js"
+    ]
+  },
+  "version": "1.2",
+  "permissions": [
+    "tabs",
+    "storage",
+    "contextMenus",
+    "http://www.dolc.de/"
+  ],
   "page_action": {
-        "default_icon": "icon.png",
-        "default_title": "Wir blocken das",
-        "default_popup": "popup.html"
-    },
-  "content_scripts": [{
-    "matches": ["http://www.dolc.de/*"],
-    "js": ["jquery-2.1.4.js", "utils.js", "content_script.js"],
-     "run_at": "document_end"
-	   }]
+    "default_icon": {
+        "19": "icon-19.png",
+        "38": "icon-38.png"
+      },
+    "default_title": "Wir blocken das",
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "http://www.dolc.de/*fid=482*"
+      ],
+      "js": [
+        "jquery-2.1.4.js",
+        "utils.js",
+        "content_script.js"
+      ],
+      "run_at": "document_end"
+    }
+  ],
+  "options_ui": {
+    "page": "options.html",//Required
+    "chrome_style": true,//Recommended
+    "open_in_tab": false
+  }
 }
