--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Wir blocken das !",
   "short_name": "MLGB",
   "description": "Wir blocken das !",
   "icons": {
-    "128": "icon.png"
+    "128": "icons/03.png"
   },
   "background": {
     "scripts": [
@@ -21,10 +21,7 @@
     "http://www.dolc.de/"
   ],
   "page_action": {
-    "default_icon": {
-        "19": "icon-19.png",
-        "38": "icon-38.png"
-      },
+    "default_icon": "icons/02.png",
     "default_title": "Wir blocken das",
     "default_popup": "popup.html"
   },
